== Upgrade Notice ==

= 1.4.18 =
Many method names have been changed. Any custom filters may need to be updated.

= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.4.32 (future) =
* Fixed bug in detecting need for imap extension.

= 1.4.31 (2013.01.25) =
* Enhanced category detection to be compatible with Polylang plugin.
* Enhanced prerequisite detection.
* Now using wp_mail() instead of mail()
* WordPress 3.5.1 compatibility

= 1.4.30 (2013.01.22) =
* Fixed bug that caused activation to fail or show a blank page.
* Fixed bug where WP media upload rejects a file.
* Added a check for mbstring.
* Fixed bug when attachment names were only supplied via d_parameters.

= 1.4.29 (2013.01.19) =
* Fixed bug where manually running Postie worked, but calling get_mail.php directly did not.

= 1.4.28 (2013.01.18) =
* Fixed bug in "reset settings to default" where the protocol wasn't being retained.
* More cleanup and clarification on settings screen.
* Fixed bug where excerpts weren't getting set if "Filter newlines" was set to "Yes"
* Removed logic to increase memory size.

= 1.4.27 (2013.01.17) =
* Updated sample plugin for extending Postie.
* Updated documentation for template variables.
* Fixed a bug where text/plain attachments were not being treated as attachments.
* Look for and include filterPostie.php in wp-content if it exists. (used for custom filters so they don't get deleted on upgrades)
* Cleanup of settings screen layout.
* Added additional error logging for mail connections.

= 1.4.26 (2013.01.15) =
* Fixed a bug where signatures were not removed in html emails.
* Added support for text attachments such as text/calendar.

= 1.4.25 (2013.01.15) =
* Fixed a bug where newlines were being removed erroneously.

= 1.4.24 (2013.01.13) =
* Fixed a bug where the original attachment name wasn't being used.