@@ -1,6 +1,9 @@
 == Usage ==
+= Specifying Beginning and Ending of Post =
 * If you put in :start - the message processing won't start until it sees that string.
 * If you put in :end - the message processing will stop once it sees that string.
+
+= Post Date =
 * Posts can have a specific publication date. Relative dates like "tomorrow", "monday", "first day of next month" are supported.
   *    date: date
   *    date: date time
@@ -9,6 +12,8 @@
   *    delay:1h - 1 hour
   *    delay:1m - 1 minute
   *    delay:1d2h4m - 1 day 2 hours 4m
+
+= Comment Control =
 * By putting comments:X in your message you can control if comments are allowed
    *   comments:0 - means closed
    *   comments:1 - means open
@@ -19,6 +24,8 @@
     get posted as a comment to the "foo" post. This works by the subject
     line, so if you have two posts with titles "foo", then the comment
     will get placed in the more recent post.
+
+= Post Excerpt =
 * Custom excerpt
   * You can include a custom excerpt of an e-mail by putting it between
     :excerptstart and :excerptend
@@ -29,7 +36,7 @@
   You can specify the post type by including it as the first part of the subject
   E.g. post type//real subject
 
-= Category and tag handling =
+= Categories =
 * If you put a category name in the subject with a : it will be used
   as the category for the post
 * If you put a category id number in the subject with a : it will
@@ -60,6 +67,8 @@
 * You can also set a default tag to be applied if no tags are included.
 
 = Image Handling =
+Note you can only use this feature if your "Preferred Text Type" is set to "plain"
+
 * Allows you to attach images to your email and automatically post
   them to your blog
 * You can publish images in the text of your message by using #img1#
